@@ -16,102 +16,80 @@
  */
 package org.apache.nifi.processors.standard;
 
-import org.apache.nifi.controller.AbstractControllerService;
-import org.apache.nifi.dbcp.DBCPService;
-import org.apache.nifi.processor.exception.ProcessException;
 import org.apache.nifi.serialization.record.MockRecordWriter;
 import org.apache.nifi.util.MockFlowFile;
 import org.apache.nifi.util.TestRunner;
 import org.apache.nifi.util.TestRunners;
-import org.apache.nifi.util.file.FileUtils;
 import org.junit.jupiter.api.AfterAll;
+import org.junit.jupiter.api.AfterEach;
 import org.junit.jupiter.api.BeforeAll;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
-import org.junit.jupiter.api.condition.DisabledOnOs;
-import org.junit.jupiter.api.condition.OS;
+import org.junit.jupiter.api.io.TempDir;
 
-import java.io.File;
-import java.io.IOException;
+import java.nio.file.Path;
 import java.sql.Connection;
-import java.sql.DriverManager;
 import java.sql.SQLException;
-import java.sql.SQLNonTransientConnectionException;
 import java.sql.Statement;
-import java.util.HashMap;
 import java.util.List;
-import java.util.Map;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
 
-/**
- * Unit tests for ListDatabaseTables processor.
- */
-public class TestListDatabaseTables {
+class TestListDatabaseTables {
+
+    private static final String SERVICE_ID = EmbeddedDatabaseConnectionService.class.getSimpleName();
+
+    private static EmbeddedDatabaseConnectionService service;
 
     TestRunner runner;
+
     ListDatabaseTables processor;
 
-    private final static String DB_LOCATION = "target/db_ldt";
-
     @BeforeAll
-    public static void setupBeforeClass() {
-        System.setProperty("derby.stream.error.file", "target/derby.log");
-
-        // remove previous test database, if any
-        final File dbLocation = new File(DB_LOCATION);
-        try {
-            FileUtils.deleteFile(dbLocation, true);
-        } catch (IOException ignored) {
-            // Do nothing, may not have existed
-        }
+    static void setService(@TempDir final Path databaseLocation) {
+        service = new EmbeddedDatabaseConnectionService(databaseLocation);
     }
 
     @AfterAll
-    public static void cleanUpAfterClass() throws Exception {
-        try {
-            DriverManager.getConnection("jdbc:derby:" + DB_LOCATION + ";shutdown=true");
-        } catch (SQLNonTransientConnectionException ignored) {
-            // Do nothing, this is what happens at Derby shutdown
-        }
-        // remove previous test database, if any
-        final File dbLocation = new File(DB_LOCATION);
-        try {
-            FileUtils.deleteFile(dbLocation, true);
-        } catch (IOException ignored) {
-            // Do nothing, may not have existed
-        }
-        System.clearProperty("derby.stream.error.file");
+    static void shutdown() {
+        service.close();
     }
 
     @BeforeEach
-    public void setUp() throws Exception {
+    void setRunner() throws Exception {
         processor = new ListDatabaseTables();
-        final DBCPService dbcp = new DBCPServiceSimpleImpl();
-        final Map<String, String> dbcpProperties = new HashMap<>();
 
         runner = TestRunners.newTestRunner(ListDatabaseTables.class);
-        runner.addControllerService("dbcp", dbcp, dbcpProperties);
-        runner.enableControllerService(dbcp);
-        runner.setProperty(ListDatabaseTables.DBCP_SERVICE, "dbcp");
+        runner.addControllerService(SERVICE_ID, service);
+        runner.enableControllerService(service);
+        runner.setProperty(ListDatabaseTables.DBCP_SERVICE, SERVICE_ID);
+    }
+
+    @AfterEach
+    void dropTables() {
+        final List<String> tables = List.of(
+                "TEST_TABLE1",
+                "TEST_TABLE2"
+        );
+
+        for (final String table : tables) {
+            try (
+                    Connection connection = service.getConnection();
+                    Statement statement = connection.createStatement()
+            ) {
+                statement.execute("DROP TABLE %s".formatted(table));
+            } catch (final SQLException ignored) {
+
+            }
+        }
     }
 
     @Test
-    public void testListTablesNoCount() throws Exception {
-
-        // load test data to database
-        final Connection con = ((DBCPService) runner.getControllerService("dbcp")).getConnection();
-        Statement stmt = con.createStatement();
-
-        try {
-            stmt.execute("drop table TEST_TABLE1");
-            stmt.execute("drop table TEST_TABLE2");
-        } catch (final SQLException ignored) {
-            // Do nothing, may not have existed
+    void testListTablesNoCount() throws Exception {
+        try (Statement stmt = createStatement()) {
+            stmt.execute("create table TEST_TABLE1 (id integer not null, val1 integer, val2 integer, constraint my_pk1 primary key (id))");
+            stmt.execute("create table TEST_TABLE2 (id integer not null, val1 integer, val2 integer, constraint my_pk2 primary key (id))");
         }
-
-        stmt.execute("create table TEST_TABLE1 (id integer not null, val1 integer, val2 integer, constraint my_pk1 primary key (id))");
-        stmt.execute("create table TEST_TABLE2 (id integer not null, val1 integer, val2 integer, constraint my_pk2 primary key (id))");
 
         runner.run();
         runner.assertTransferCount(ListDatabaseTables.REL_SUCCESS, 2);
@@ -122,24 +100,15 @@ public class TestListDatabaseTables {
     }
 
     @Test
-    public void testListTablesWithCount() throws Exception {
+    void testListTablesWithCount() throws Exception {
         runner.setProperty(ListDatabaseTables.INCLUDE_COUNT, "true");
 
-        // load test data to database
-        final Connection con = ((DBCPService) runner.getControllerService("dbcp")).getConnection();
-        Statement stmt = con.createStatement();
-
-        try {
-            stmt.execute("drop table TEST_TABLE1");
-            stmt.execute("drop table TEST_TABLE2");
-        } catch (final SQLException ignored) {
-            // Do nothing, may not have existed
+        try (Statement stmt = createStatement()) {
+            stmt.execute("create table TEST_TABLE1 (id integer not null, val1 integer, val2 integer, constraint my_pk1 primary key (id))");
+            stmt.execute("insert into TEST_TABLE1 (id, val1, val2) VALUES (0, NULL, 1)");
+            stmt.execute("insert into TEST_TABLE1 (id, val1, val2) VALUES (1, 1, 1)");
+            stmt.execute("create table TEST_TABLE2 (id integer not null, val1 integer, val2 integer, constraint my_pk2 primary key (id))");
         }
-
-        stmt.execute("create table TEST_TABLE1 (id integer not null, val1 integer, val2 integer, constraint my_pk1 primary key (id))");
-        stmt.execute("insert into TEST_TABLE1 (id, val1, val2) VALUES (0, NULL, 1)");
-        stmt.execute("insert into TEST_TABLE1 (id, val1, val2) VALUES (1, 1, 1)");
-        stmt.execute("create table TEST_TABLE2 (id integer not null, val1 integer, val2 integer, constraint my_pk2 primary key (id))");
 
         runner.run();
         runner.assertTransferCount(ListDatabaseTables.REL_SUCCESS, 2);
@@ -149,24 +118,15 @@ public class TestListDatabaseTables {
     }
 
     @Test
-    public void testListTablesWithCountAsRecord() throws Exception {
+    void testListTablesWithCountAsRecord() throws Exception {
         runner.setProperty(ListDatabaseTables.INCLUDE_COUNT, "true");
 
-        // load test data to database
-        final Connection con = ((DBCPService) runner.getControllerService("dbcp")).getConnection();
-        Statement stmt = con.createStatement();
-
-        try {
-            stmt.execute("drop table TEST_TABLE1");
-            stmt.execute("drop table TEST_TABLE2");
-        } catch (final SQLException ignored) {
-            // Do nothing, may not have existed
+        try (Statement stmt = createStatement()) {
+            stmt.execute("create table TEST_TABLE1 (id integer not null, val1 integer, val2 integer, constraint my_pk1 primary key (id))");
+            stmt.execute("insert into TEST_TABLE1 (id, val1, val2) VALUES (0, NULL, 1)");
+            stmt.execute("insert into TEST_TABLE1 (id, val1, val2) VALUES (1, 1, 1)");
+            stmt.execute("create table TEST_TABLE2 (id integer not null, val1 integer, val2 integer, constraint my_pk2 primary key (id))");
         }
-
-        stmt.execute("create table TEST_TABLE1 (id integer not null, val1 integer, val2 integer, constraint my_pk1 primary key (id))");
-        stmt.execute("insert into TEST_TABLE1 (id, val1, val2) VALUES (0, NULL, 1)");
-        stmt.execute("insert into TEST_TABLE1 (id, val1, val2) VALUES (1, 1, 1)");
-        stmt.execute("create table TEST_TABLE2 (id integer not null, val1 integer, val2 integer, constraint my_pk2 primary key (id))");
 
         final MockRecordWriter recordWriter = new MockRecordWriter(null, false);
         runner.addControllerService("record-writer", recordWriter);
@@ -176,31 +136,23 @@ public class TestListDatabaseTables {
         runner.run();
         runner.assertTransferCount(ListDatabaseTables.REL_SUCCESS, 1);
 
-        final MockFlowFile flowFile = runner.getFlowFilesForRelationship(ListDatabaseTables.REL_SUCCESS).get(0);
+        final MockFlowFile flowFile = runner.getFlowFilesForRelationship(ListDatabaseTables.REL_SUCCESS).getFirst();
         flowFile.assertContentEquals(
-            "TEST_TABLE1,,APP,APP.TEST_TABLE1,TABLE,,2\n" +
-                "TEST_TABLE2,,APP,APP.TEST_TABLE2,TABLE,,0\n");
+                """
+                        TEST_TABLE1,,APP,APP.TEST_TABLE1,TABLE,,2
+                        TEST_TABLE2,,APP,APP.TEST_TABLE2,TABLE,,0
+                        """);
     }
 
-    @DisabledOnOs(OS.WINDOWS)
     @Test
-    public void testListTablesAfterRefresh() throws Exception {
-        // load test data to database
-        final Connection con = ((DBCPService) runner.getControllerService("dbcp")).getConnection();
-        Statement stmt = con.createStatement();
+    void testListTablesAfterRefresh() throws Exception {
 
-        try {
-            stmt.execute("drop table TEST_TABLE1");
-            stmt.execute("drop table TEST_TABLE2");
-        } catch (final SQLException ignored) {
-            // Do nothing, may not have existed
+        try (Statement stmt = createStatement()) {
+            stmt.execute("create table TEST_TABLE1 (id integer not null, val1 integer, val2 integer, constraint my_pk1 primary key (id))");
+            stmt.execute("insert into TEST_TABLE1 (id, val1, val2) VALUES (0, NULL, 1)");
+            stmt.execute("insert into TEST_TABLE1 (id, val1, val2) VALUES (1, 1, 1)");
+            stmt.execute("create table TEST_TABLE2 (id integer not null, val1 integer, val2 integer, constraint my_pk2 primary key (id))");
         }
-
-        stmt.execute("create table TEST_TABLE1 (id integer not null, val1 integer, val2 integer, constraint my_pk1 primary key (id))");
-        stmt.execute("insert into TEST_TABLE1 (id, val1, val2) VALUES (0, NULL, 1)");
-        stmt.execute("insert into TEST_TABLE1 (id, val1, val2) VALUES (1, 1, 1)");
-        stmt.execute("create table TEST_TABLE2 (id integer not null, val1 integer, val2 integer, constraint my_pk2 primary key (id))");
-        stmt.close();
 
         runner.setProperty(ListDatabaseTables.INCLUDE_COUNT, "true");
         runner.setProperty(ListDatabaseTables.REFRESH_INTERVAL, "100 millis");
@@ -219,23 +171,13 @@ public class TestListDatabaseTables {
         runner.assertTransferCount(ListDatabaseTables.REL_SUCCESS, 2);
     }
 
-    @DisabledOnOs(OS.WINDOWS)
     @Test
-    public void testListTablesMultipleRefresh() throws Exception {
-        // load test data to database
-        final Connection con = ((DBCPService) runner.getControllerService("dbcp")).getConnection();
-        Statement stmt = con.createStatement();
-
-        try {
-            stmt.execute("drop table TEST_TABLE1");
-            stmt.execute("drop table TEST_TABLE2");
-        } catch (final SQLException ignored) {
-            // Do nothing, may not have existed
+    void testListTablesMultipleRefresh() throws Exception {
+        try (Statement stmt = createStatement()) {
+            stmt.execute("create table TEST_TABLE1 (id integer not null, val1 integer, val2 integer, constraint my_pk1 primary key (id))");
+            stmt.execute("insert into TEST_TABLE1 (id, val1, val2) VALUES (0, NULL, 1)");
+            stmt.execute("insert into TEST_TABLE1 (id, val1, val2) VALUES (1, 1, 1)");
         }
-
-        stmt.execute("create table TEST_TABLE1 (id integer not null, val1 integer, val2 integer, constraint my_pk1 primary key (id))");
-        stmt.execute("insert into TEST_TABLE1 (id, val1, val2) VALUES (0, NULL, 1)");
-        stmt.execute("insert into TEST_TABLE1 (id, val1, val2) VALUES (1, 1, 1)");
 
         runner.setProperty(ListDatabaseTables.INCLUDE_COUNT, "true");
         runner.setProperty(ListDatabaseTables.REFRESH_INTERVAL, "200 millis");
@@ -243,18 +185,20 @@ public class TestListDatabaseTables {
         long startTimer = System.currentTimeMillis();
         runner.assertTransferCount(ListDatabaseTables.REL_SUCCESS, 1);
         List<MockFlowFile> results = runner.getFlowFilesForRelationship(ListDatabaseTables.REL_SUCCESS);
-        assertEquals("2", results.get(0).getAttribute(ListDatabaseTables.DB_TABLE_COUNT));
+        assertEquals("2", results.getFirst().getAttribute(ListDatabaseTables.DB_TABLE_COUNT));
         runner.clearTransferState();
 
         // Add another table immediately, the first table should not be listed again but the second should
-        stmt.execute("create table TEST_TABLE2 (id integer not null, val1 integer, val2 integer, constraint my_pk2 primary key (id))");
-        stmt.close();
+        try (Statement stmt = createStatement()) {
+            stmt.execute("create table TEST_TABLE2 (id integer not null, val1 integer, val2 integer, constraint my_pk2 primary key (id))");
+        }
+
         runner.run();
         long endTimer = System.currentTimeMillis();
         // Expect 1 or 2 tables (whether execution has taken longer than the refresh time)
         runner.assertTransferCount(ListDatabaseTables.REL_SUCCESS, (endTimer - startTimer > 200) ? 2 : 1);
         results = runner.getFlowFilesForRelationship(ListDatabaseTables.REL_SUCCESS);
-        assertEquals((endTimer - startTimer > 200) ? "2" : "0", results.get(0).getAttribute(ListDatabaseTables.DB_TABLE_COUNT));
+        assertEquals((endTimer - startTimer > 200) ? "2" : "0", results.getFirst().getAttribute(ListDatabaseTables.DB_TABLE_COUNT));
         runner.clearTransferState();
 
         // Now wait longer than the refresh interval and assert the refresh has happened (i.e. the two tables are re-listed)
@@ -263,24 +207,8 @@ public class TestListDatabaseTables {
         runner.assertTransferCount(ListDatabaseTables.REL_SUCCESS, 2);
     }
 
-    /**
-     * Simple implementation only for ListDatabaseTables processor testing.
-     */
-    private class DBCPServiceSimpleImpl extends AbstractControllerService implements DBCPService {
-
-        @Override
-        public String getIdentifier() {
-            return "dbcp";
-        }
-
-        @Override
-        public Connection getConnection() throws ProcessException {
-            try {
-                Class.forName("org.apache.derby.jdbc.EmbeddedDriver");
-                return DriverManager.getConnection("jdbc:derby:" + DB_LOCATION + ";create=true");
-            } catch (final Exception e) {
-                throw new ProcessException("getConnection failed: " + e);
-            }
-        }
+    private Statement createStatement() throws SQLException {
+        final Connection connection = service.getConnection();
+        return connection.createStatement();
     }
 }
